--- a/views/newList.ejs
+++ b/views/newList.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSTGRESQL-BREADS</title>
 
-    <link rel="stylesheet" , href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -71,7 +71,7 @@
     <a class="add" href="/add">Tambah</a>
     
 
-    <table>
+    <table class="tabble tabble-stripped">
         <thead>
             <tr>
                 <th>ID</th>
@@ -83,9 +83,39 @@
                 <th>Actions</th>
             </tr>
         </thead>
+        <tbody>
+            <% rows.forEach(item=> {%>
+                <tr>
+                    <td>
+                        <%= item['id '] %>
+                    </td>
+                    <td>
+                        <%= item.stringdata %>
+                    </td>
+                    <td>
+                        <%= item.integerdata %>
+                    </td>
+                    <td>
+                        <%= item.floatdata %>
+                    </td>
+                    <td>
+                        <%= moment(item.datedata).format('DD MMMM YYYY') %>
+                    </td>
+                    <td>
+                        <%= item.booleandata %>
+                    </td>
+                    <td>
+                        <a class="edit" href="/edit/<%= item.id%>">Edit</a>
+                        <a class="delete" href="/delete/<%= item.id%>">Hapus</a>
+                    </td>
+                </tr>
+                <% }) %>
+        </tbody>
 
         
     </table>
+    <br>
+    <a class="add" href="/add">Tambah</a>
 </body>
 
 </html>
