fixing column name

--- a/views/newEdit.ejs
+++ b/views/newEdit.ejs
@@ -16,7 +16,7 @@
                     <label for="string">ID</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="string" name="id" placeholder="ID" value="<%= item['id '] %>" readonly>
+                    <input type="text" id="string" name="id" placeholder="ID" value="<%= item.id %>" readonly>
                 </div>
             </div>
             <div class="row">
