--- a/views/newList.ejs
+++ b/views/newList.ejs
@@ -87,7 +87,7 @@
             <% rows.forEach(item=> {%>
                 <tr>
                     <td>
-                        <%= item['id '] %>
+                        <%= item.id %>
                     </td>
                     <td>
                         <%= item.stringdata %>
