--- a/views/newAdd.ejs
+++ b/views/newAdd.ejs
@@ -5,50 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSTGRESQL-BREADS</title>
+
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1 class="judul">Add Data</h1>
+    <div class="card-header">
+        <h2>Filters</h2>
+    </div>
 
-    <div class="container">
+    <div class="card-body">
         <form action="" method="post">
-            <div class="row">
-                <div class="col-25">
-                    <label for="string">String</label>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <label class="col-form-label" for="string">String</label>
                 </div>
-                <div class="col-75">
-                    <input type="text" id="string" name="stringdata" placeholder="String">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-25">
-                    <label for="integer">Integer</label>
-                </div>
-                <div class="col-75">
-                    <input type="number" id="integer" name="integerdata" placeholder="Integer">
+                <div class="col-sm-10">
+                    <input class="form-control" type="text" id="string" name="stringdata" placeholder="String">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-25">
-                    <label for="float">Float</label>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <label class="col-form-label" for="integer">Integer</label>
                 </div>
-                <div class="col-75">
-                    <input type="number" id="float" step="any" name="floatdata" placeholder="Float">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-25">
-                    <label for="date">Date</label>
-                </div>
-                <div class="col-75">
-                    <input type="date" id="date" name="datedata" placeholder="end date">
+                <div class="col-sm-10">
+                    <input class="form-control" type="number" id="integer" name="integerdata" placeholder="Integer">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-25">
-                    <label for="boolean">Boolean</label>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <label class="col-form-label" for="float">Float</label>
                 </div>
-                <div class="col-75">
-                    <select name="booleandata" id="boolean">
+                <div class="col-sm-10">
+                    <input class="form-control" type="number" id="float" step="any" name="floatdata" placeholder="Float">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <label class="col-form-label" for="date">Date</label>
+                </div>
+                <div class="col-sm-10">
+                    <input class="form-control" type="date" id="date" name="datedata" placeholder="end date">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <label class="col-form-label" for="boolean">Boolean</label>
+                </div>
+                <div class="col-sm-10">
+                    <select class="form-control" name="booleandata" id="boolean">
                         <option value="" disabled selected hidden>Choose the boolean ...</option>
                         <option value="true">True</option>
                         <option value="false">False</option>
@@ -56,8 +62,8 @@
                 </div>
             </div>
             <br>
-            <div class="row">
-                <input type="submit" value="Submit">
+            <div>
+                <input class="btn btn-success" type="submit" value="Save">
             </div>
         </form>
     </div>
