--- a/views/newList.ejs
+++ b/views/newList.ejs
@@ -17,42 +17,62 @@
     <div class="card-header">
         <h2>Filters</h2>
     </div>
-    <div class="container">
+    <div class="card-body">
         <form action="" method="get">
             <input type="hidden" name="page" value="1" />
             <input type="hidden" name="sortBy" value="id" />
             <input type="hidden" name="sortMode" value="asc" />
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="id">ID</label>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <input class="form-check-input mt-0" type="checkbox" id="idcheck" name="idcheck" <%=query.idcheck
+                        && 'on' ? 'checked' : '' %>>
+                    <label class="col-form-label" for="idcheck">ID</label>
+                </div>
                 <div class="col-sm-10">
-                    <input class="form-control" type="text" id="id" name="id" placeholder="ID" value="<%=query.id%>">
+                    <input class="form-control" type="number" id="id" name="id" placeholder="ID" value="<%=query.id%>">
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="string">String</label>
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <input class="form-check-input mt-0" type="checkbox" id="stringcheck" name="stringcheck"
+                        <%=query.stringcheck && 'on' ? 'checked' : '' %>>
+                    <label class="col-form-label" for="stringcheck">String</label>
+                </div>
+
                 <div class="col-sm-10">
                     <input class="form-control" type="text" id="string" name="stringdata" placeholder="String"
                         value="<%=query.stringdata%>">
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="integer">Integer</label>
-
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <input class="form-check-input mt-0" type="checkbox" id="integercheck" name="integercheck"
+                        <%=query.integercheck && 'on' ? 'checked' : '' %>>
+                    <label class="col-form-label" for="integercheck">Integer</label>
+                </div>
                 <div class="col-sm-10">
                     <input class="form-control" type="number" id="integer" name="integerdata" placeholder="Integer"
                         value="<%=query.integerdata%>">
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="float">Float</label>
-
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <input class="form-check-input mt-0" type="checkbox" id="floatcheck" name="floatcheck"
+                        <%=query.floatcheck && 'on' ? 'checked' : '' %>>
+                    <label class="col-form-label" for="floatcheck">Float</label>
+                </div>
                 <div class="col-sm-10">
                     <input class="form-control" type="number" id="float" step="any" name="floatdata" placeholder="Float"
                         value="<%=query.floatdata%>">
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="date">Date</label>
+            <div class="mb-3 row">
+
+                <div class="col-sm-2 d-flex align-items-center">
+                    <input class="form-check-input mt-0" type="checkbox" id="datecheck" name="datecheck"
+                        <%=query.datecheck && 'on' ? 'checked' : '' %>>
+                    <label class="col-form-label" for="datecheck">Date</label>
+                </div>
 
                 <div class="col-sm-10">
                     <input class="form-control" type="date" id="date" name="startDate" placeholder="start date"
@@ -63,11 +83,14 @@
                         value="<%=query.endDate%>">
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="boolean">Boolean</label>
-
+            <div class="mb-3 row">
+                <div class="col-sm-2 d-flex align-items-center">
+                    <input class="form-check-input mt-0" type="checkbox" id="booleancheck" name="booleancheck"
+                        <%=query.booleancheck && 'on' ? 'checked' : '' %>>
+                    <label class="col-form-label" for="booleancheck">Boolean</label>
+                </div>
                 <div class="col-sm-10">
-                    <select name="booleandata" id="boolean">
+                    <select name="booleandata" id="boolean" class="form-control">
                         <option value="" disabled selected hidden>Choose the boolean ...</option>
                         <option value="true" <%=rows.booleandata==true ? 'selected' : null %>>True</option>
                         <option value="false" <%=rows.booleandata==false ? 'selected' : null %>>False</option>
@@ -75,16 +98,12 @@
                 </div>
             </div>
             <br>
-            <div class="form-group">
-                <input type="submit" value="Submit">
+            <div class="card-footer">
+                <button type="submit" class="btn btn-success"> Search</button>
             </div>
         </form>
     </div>
-
     <br>
-    <a class="add" href="/add">Tambah</a>
-
-
     <table class="table table-striped">
         <thead>
             <tr>
@@ -147,9 +166,7 @@
                     </li>
         </ul>
     </nav>
-
-    <br>
-    <a class="add" href="/add">Tambah</a>
+    <a class="btn btn-success" href="/add"> Tambah</button>
 </body>
 
 </html>
